--- a/docs/design/2022-11-17-ttl-table.md
+++ b/docs/design/2022-11-17-ttl-table.md
@@ -305,6 +305,7 @@ We'll introduce some new metrics to monitor the TTL jobs:
 - If an index with the prefix of the TTL time column exists, we can use it to query expire rows instead of scanning the full table. It will reduce the execution time of the scan tasks.  
 - Support TTL table as a parent table referred by a child table with 'ON DELETE CASCADE'. When some rows in a TTL table are deleted, the related rows in child table will be deleted too.
 - Support pushing down generated column condition to TiKV side. Or use the definition of generated column to construct condition directly.
+- Scan the table from TiFlash (if table has any TiFlash replica) instead of TiKV to reduce performance effect on TP business.
 
 ## Alternative Solutions
 
