--- a/docs/design/2022-11-17-ttl-table.md
+++ b/docs/design/2022-11-17-ttl-table.md
@@ -102,6 +102,7 @@ CREATE TABLE `tidb_ttl_table_status` (
   `last_job_ttl_expire` timestamp NULL DEFAULT NULL,
   `current_job_id` varchar(64) DEFAULT NULL,
   `current_job_owner_id` varchar(64) DEFAULT NULL,
+  `current_job_owner_addr` varchar(256) DEFAULT NULL,
   `current_job_owner_hb_time` timestamp,
   `current_job_start_time` timestamp NULL DEFAULT NULL,
   `current_job_ttl_expire` timestamp NULL DEFAULT NULL,
@@ -121,6 +122,7 @@ The explanation of the fields:
 - `last_job_ttl_expire`: The expired time used by the last job for TTL works.
 - `current_job_id`: The id of the current job that is not finished. It not only includes the running job, but also includes the job that is failed or cancelled by user.
 - `current_job_owner_id`: The id of the owner (a TiDB node) that runs the job. 
+- `current_job_owner_addr`: The network address of the owner that runs the job.
 - `current_job_owner_hb_time`: The owner of the job updates this field with the current timestamp periodically. If it is not updated for a long time, it means the previous owner is offline and this job should be taken over by other node later. 
 - `current_job_start_time`: The start time of the current job.
 - `current_job_ttl_expire`: The expired time used by the current job for TTL works.
