--- a/docs/design/2022-11-17-ttl-table.md
+++ b/docs/design/2022-11-17-ttl-table.md
@@ -253,9 +253,9 @@ Some new system variables will be introduced:
   - Default: 4
 
 - `tidb_ttl_delete_batch_size`
-    - The batch size in one delete query when deleting expired rows. 0 is for no limit will be set.
+    - The batch size in one delete query when deleting expired rows.
     - Scope: Global
-    - Range: [0, MaxInt64]
+    - Range: [0, 10240]
     - Default: 500
 
 - `tidb_ttl_delete_rate_limit`
