--- a/docs/design/2022-11-17-ttl-table.md
+++ b/docs/design/2022-11-17-ttl-table.md
@@ -16,7 +16,7 @@
       * [Constraints](#constraints)
     * [TTL Job Management](#ttl-job-management)
     * [TTL Job Details](#ttl-job-details)
-      * [Scan Task](#scan-task)
+      * [Scan Tasks](#scan-tasks)
       * [Delete Tasks](#delete-tasks)
     * [New System Variables](#new-system-variables)
     * [New Metrics](#new-metrics)
@@ -146,7 +146,7 @@ TiDB schedules TTL jobs to delete expired rows. One job is related to a TTL tabl
 
 A running job contains two kinds of tasks: scan tasks and delete tasks. Scan tasks are used to filter out expired rows from the table and then send them to delete tasks which will do delete operations in batch. When all expired rows are deleted, the job will be finished. Let's talk about scan and delete tasks in detail.
 
-#### Scan Task
+#### Scan Tasks
 
 When a job starts to run, it first splits the table to N (N >= 1) ranges according to their primary key. Each range will be assigned to a scan task and each scan task performs a range scan for the specified range. The pseudocode below shows how it works:
 
