--- a/docs/design/2022-11-17-ttl-table.md
+++ b/docs/design/2022-11-17-ttl-table.md
@@ -254,10 +254,10 @@ Some new system variables will be introduced:
   - Default: 4
 
 - `tidb_ttl_delete_batch_size`
-    - The batch size in one delete query when deleting expired rows.
-    - Scope: Global
-    - Range: [0, 10240]
-    - Default: 100
+  - The batch size in one delete query when deleting expired rows.
+  - Scope: Global
+  - Range: [0, 10240]
+  - Default: 100
 
 - `tidb_ttl_delete_rate_limit`
   - The rate limit of the delete operations in each TiDB node. 0 is for no limit
@@ -309,6 +309,7 @@ We'll introduce some new metrics to monitor the TTL jobs:
 - Support TTL table as a parent table referred by a child table with 'ON DELETE CASCADE'. When some rows in a TTL table are deleted, the related rows in child table will be deleted too.
 - Support pushing down generated column condition to TiKV side. Or use the definition of generated column to construct condition directly.
 - Scan the table from TiFlash (if table has any TiFlash replica) instead of TiKV to reduce performance effect on TP business.
+- Dynamically adjust the runtime settings according to the current overhead of the cluster.
 
 ## Alternative Solutions
 
