add sysvar `tidb_ttl_enable_instance_worker`

--- a/docs/design/2022-11-17-ttl-table.md
+++ b/docs/design/2022-11-17-ttl-table.md
@@ -265,6 +265,12 @@ Some new system variables will be introduced:
   - Range: [0, MaxInt64]
   - Default: 0
 
+- `tidb_ttl_enable_instance_worker`
+  - Whether to start TTL workers in the current instance or not.
+  - Scope: Instance
+  - Values: [ON, OFF]
+  - Default: ON
+
 ### New Metrics
 
 We'll introduce some new metrics to monitor the TTL jobs:
