--- a/docs/design/2022-11-17-ttl-table.md
+++ b/docs/design/2022-11-17-ttl-table.md
@@ -61,7 +61,7 @@ To make it compatible with mysql, TTL options also support the comment format. F
 CREATE TABLE t1 (
     id int PRIMARY KEY,
     created_at TIMESTAMP
-) /*T![ttl] TTL = `created_at` + INTERVAL 3 MONTH */;
+) /*T![ttl] TTL = `created_at` + INTERVAL 3 MONTH TTL_ENABLE = 'OFF'*/;
 ```
 
 #### Alter a Table with TTL
