--- a/docs/design/2022-11-17-ttl-table.md
+++ b/docs/design/2022-11-17-ttl-table.md
@@ -84,7 +84,7 @@ ALTER TABLE t1 NO_TTL;
 
 #### Constraints
 
-- TTL does NOT work on a table that is referenced by a foreign key. For example, you cannot add TTL to the parent table, because it is referenced by a foreign key in the child table and deleting parent table could violate this constraint.
+- TTL does NOT work on a table that is referenced by a foreign key. For example, you cannot add TTL to the parent table, because it is referenced by a foreign key in the child table and deleting a row from the parent table could violate this constraint.
 
 ### TTL Job Management
 
