update remove ttl

--- a/docs/design/2022-11-17-ttl-table.md
+++ b/docs/design/2022-11-17-ttl-table.md
@@ -79,7 +79,7 @@ We should allow to update the existed TTL options. When it is updated, the runni
 If we want to remove a table's TTL options, we can just do:
 
 ```sql
-ALTER TABLE t1 NO_TTL;
+ALTER TABLE t1 REMOVE TTL;
 ```
 
 #### Constraints
