--- a/docs/design/2022-11-17-ttl-table.md
+++ b/docs/design/2022-11-17-ttl-table.md
@@ -101,6 +101,7 @@ CREATE TABLE `tidb_ttl_table_status` (
   `last_job_start_time` timestamp NULL DEFAULT NULL,
   `last_job_finish_time` timestamp NULL DEFAULT NULL,
   `last_job_ttl_expire` timestamp NULL DEFAULT NULL,
+  `last_job_summary` text DEFAULT NULL,
   `current_job_id` varchar(64) DEFAULT NULL,
   `current_job_owner_id` varchar(64) DEFAULT NULL,
   `current_job_owner_addr` varchar(256) DEFAULT NULL,
@@ -108,7 +109,8 @@ CREATE TABLE `tidb_ttl_table_status` (
   `current_job_start_time` timestamp NULL DEFAULT NULL,
   `current_job_ttl_expire` timestamp NULL DEFAULT NULL,
   `current_job_state` text DEFAULT NULL,
-  `current_job_status` varchar(64) DEFAULT NULL
+  `current_job_status` varchar(64) DEFAULT NULL,
+  `current_job_status_update_time` timestamp NULL DEFAULT NULL
 );
 ```
 
@@ -121,6 +123,7 @@ The explanation of the fields:
 - `last_job_start_time`: The start time of the last job.
 - `last_job_finish_time`: The finish time of the last job.
 - `last_job_ttl_expire`: The expired time used by the last job for TTL works.
+- `last_job_summary`: The summary info for the last job.
 - `current_job_id`: The id of the current job that is not finished. It not only includes the running job, but also includes the job that is failed or cancelled by user.
 - `current_job_owner_id`: The id of the owner (a TiDB node) that runs the job. 
 - `current_job_owner_addr`: The network address of the owner that runs the job.
@@ -128,7 +131,8 @@ The explanation of the fields:
 - `current_job_start_time`: The start time of the current job.
 - `current_job_ttl_expire`: The expired time used by the current job for TTL works.
 - `current_job_state`: Some inner state for the current job. It can be used for the job's fail over.
-- `current_job_status`: A enum with one of values: running, cancelling, cancelled, error
+- `current_job_status`: A enum with one of values: waiting, running, cancelling, cancelled, error
+- `current_job_status_update_time`: The update time of the current status
 
 TTL job for each table runs periodically according to the configuration of the system variable `tidb_ttl_job_run_interval` . For example, if we configure `set @@global.tidb_ttl_job_run_interval='1h'`, the cluster will schedule TTL jobs for each table every one hour to delete expired rows.
 
@@ -223,17 +227,29 @@ If there is no secondary index in a TTL table, we can assume that most of the de
 
 Some new system variables will be introduced:
 
-- `tidb_ttl_job_pause`
-  - When this variable is `ON`, the cluster will stop to schedule TTL jobs and the running jobs will be cancelled.
+- `tidb_ttl_job_enable`
+  - When this variable is `OFF`, the cluster will stop to schedule TTL jobs and the running jobs will be cancelled.
   - Scope: Global
   - Values: [ON, OFF]
-  - Default: OFF
+  - Default: ON
 
 - `tidb_ttl_job_run_interval`
   - The schedule interval between two jobs for one TTL table
   - Scope: Global
   - Range: [10m0s, 8760h0m0s]
   - Default: 1h
+
+- `tidb_ttl_job_schedule_window_start_time`
+  - This variable is used to restrict the start time of the time window of scheduling the ttl jobs. 
+  - Scope: Global
+  - Type: Time
+  - Default: 00:00 +0000
+
+- `tidb_ttl_job_schedule_window_end_time`
+  - This variable is used to restrict the end time of the time window of scheduling the ttl jobs.
+  - Scope: Global
+  - Type: Time
+  - Default: 23:59 +0000
 
 - `tidb_ttl_scan_worker_count`
   - The count of the scan workers in each TiDB node
@@ -275,33 +291,32 @@ Some new system variables will be introduced:
 
 We'll introduce some new metrics to monitor the TTL jobs:
 
-- `ttl_select_queries`
+- `ttl_queries`
   - The total count of select queries in TTL jobs
   - Type: Counter
-  - Labels: table
+  - Labels: type, table, result
 
-- `ttl_select_expire_rows`
-  - The total count of expired rows selected in TTL jobs
+- `ttl_processed_expired_rows`
+  - The total count of expired rows processed in TTL jobs
   - Type: Counter
-  - Labels: table
+  - Labels: type, table
 
-- `ttl_select_duration`
-  - The duration of the select queries in TTL jobs
+- `ttl_query_duration`
+  - The duration of the queries in TTL jobs
+  - Labels: type
   - Type: Histogram
 
-- `ttl_delete_queries`
-  - The total count of delete queries in TTL jobs
-  - Type: Counter
-  - Labels: table
+- `ttl_job_status`
+  - The status for the current TTL job. When the job is in the specified status, the value will 1, otherwise, it will be 0
+  - Labels: table, status
+  - Type: Gauge
 
-- `ttl_delete_expire_rows`
-  - The total count of expired rows deleted in TTL jobs
-  - Type: Counter
+- `ttl_job_scan_workers`
+  - The running scan workers count for the ttl jobs
   - Labels: table
+  - Type: Gauge
 
-- `ttl_delete_duration`
-  - The duration of the delete queries in TTL jobs
-  - Type: Histogram
+In the above metrics, the optional values for type label is 'select' and 'delete' and the optional values for result label is `success` and `error`
 
 ## Known Issues
 
