update future works

--- a/docs/design/2022-11-17-ttl-table.md
+++ b/docs/design/2022-11-17-ttl-table.md
@@ -331,6 +331,7 @@ In the above metrics, the optional values for type label is 'select' and 'delete
 - Support pushing down generated column condition to TiKV side. Or use the definition of generated column to construct condition directly.
 - Scan the table from TiFlash (if table has any TiFlash replica) instead of TiKV to reduce performance effect on TP business.
 - Dynamically adjust the runtime settings according to the current overhead of the cluster.
+- Add some builtin alters for cloud environment.
 
 ## Alternative Solutions
 
