--- a/docs/design/2022-11-17-ttl-table.md
+++ b/docs/design/2022-11-17-ttl-table.md
@@ -97,6 +97,8 @@ The TTL table status will be record in a new system table `mysql.tidb_ttl_table_
 ```sql
 CREATE TABLE `tidb_ttl_table_status` (
   `table_id` bigint(64) PRIMARY KEY,
+  `parent_table_id` bigint(64),
+  `table_statistics` TEXT DEFAULT NULL,
   `last_job_id` varchar(64) DEFAULT NULL,
   `last_job_start_time` timestamp NULL DEFAULT NULL,
   `last_job_finish_time` timestamp NULL DEFAULT NULL,
@@ -119,6 +121,8 @@ It stores some information for each TTL table. The fields prefix `last_job_` pre
 The explanation of the fields:
 
 - `table_id`: The id of the TTL table. If the table is a partitioned table, it stands for the physical table id of each partition.
+- `parent_table_id`: If the current row is a for table partition, it is the table id of its parent table. Otherwise, it equals to `table_id`.
+- `table_statistics`: some statistics of the table.
 - `last_job_id`: The id of the last success job.
 - `last_job_start_time`: The start time of the last job.
 - `last_job_finish_time`: The finish time of the last job.
