--- a/docs/design/2022-11-17-ttl-table.md
+++ b/docs/design/2022-11-17-ttl-table.md
@@ -353,3 +353,5 @@ TiKV supports TTL on RawKV, so we may get question that whether we can implement
   - No future foreign key support.
   - Not table awareness: TTL on RawKV is kv-level, can't easily set TTL on/off by Table
   - Not compatible with CDC, Backup, Secondary Index
+
+There is another proposal to implement TTL by pushing configurations to TiKV: https://github.com/pingcap/tidb/pull/22763 . However, there are still some unresolved problems. For example, it may break the constraint of snapshot isolation.
